# test_task

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  CreateSkin.cpp  CreateSkin.hpp  bussines_logic.cpp  client.cpp  cutSphereMove.cpp  lock_guard.cpp  lock_guard.h  main.cpp  mwArcFunction.cpp  mwArcFunction.hpp  mwDiscreteFunction.hpp  mwException.cpp  mwException.hpp  mwIdxRangeException.cpp  mwIdxRangeException.hpp  mwMathConstants.hpp  mwTPoint3d.hpp  server.cpp  shmseg.h  sm_receiver.cpp  sm_receiver.h  sm_sender.cpp  sm_sender.h
